[package]
name = "logicmaps"
version = "0.1.0"
authors = ["David Holtz <david.richard.holtz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.0", features = ["derive"]}

serde_json = "1.0"
jsonpath_lib = "0.2.4"